fixed light and dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,7 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: white) {
-  :root {
-    --background: #ededed;
-    --foreground: #171717;
-  }
-}
+
 
 html, body {
   margin: 0;
